--- a/public/sass/btn.scss
+++ b/public/sass/btn.scss
@@ -5,8 +5,9 @@
 @import 'animate';
 
 .btn{
+    display:inline-block;
     color:#fff;
-    padding:10px 15px;
+    padding:8px 12px;
     text-align:center;
     vertical-align:middle;
     cursor:pointer;
