--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -29,8 +29,9 @@ $action-green-hover:#48c9b0;
 $action-red:#e74c3c;
 $action-red-hover:#fc5140;
 
+$action-gray:#bdc3c7;
+$action-gray-hover:#cacfd2;
+
 $red-error:#F14F3D;
-
 $brz-blue:#0033ff;
-
 $ft86-red:#fb492d;
