--- a/public/css/btn.css
+++ b/public/css/btn.css
@@ -1,6 +1,7 @@
 .btn {
+  display: inline-block;
   color: #fff;
-  padding: 10px 15px;
+  padding: 8px 12px;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
