--- a/public/css/f.css
+++ b/public/css/f.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot');
-  src: url('../fonts/fontawesome-webfont.eot') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff') format('woff'), url('../fonts/fontawesome-webfont.ttf') format('truetype'), url('../fonts/fontawesome-webfont.svg') format('svg');
+  font-family: 'FA';
+  src: url('../fonts/fa.eot');
+  src: url('../fonts/fa.eot') format('embedded-opentype'), url('../fonts/fa.woff') format('woff'), url('../fonts/fa.ttf') format('truetype'), url('../fonts/fa.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 .fa {
   display: inline-block;
-  font-family: FontAwesome;
+  font-family: FA;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
