--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -13,6 +13,8 @@ body {
     color: #4083aa; }
     body a:hover {
       color: #205f7e; }
+    body a:active, body a:hover, body a:link, body a:visited {
+      outline: 0; }
   body h1, body h2 {
     font-size: 18px;
     margin: 0; }
@@ -44,7 +46,6 @@ ul, ol {
   display: inline-block; }
 
 .fa {
-  min-width: 16px;
   font-size: 14px;
   margin-right: 2px;
   vertical-align: baseline; }
@@ -56,3 +57,6 @@ ul, ol {
 
 .date {
   color: #ccc; }
+
+.del {
+  color: #999; }
