--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -28,7 +28,7 @@
         overflow:hidden;
         margin:60px auto 10px;
         width:$main-width;
-        min-height:650px;
+        min-height:620px;
         padding:30px;
         color:#666;
     }
@@ -76,11 +76,11 @@
 //list
 .new-post-btn{
     display:inline-block;
-    height:40px;
-    line-height:40px;
+    height:24px;
+    line-height:24px;
     background:$action-green;
     color:#fff;
-    padding:0 15px;
+    padding:8px 15px;
     border:none;
     text-decoration:none;
     @include border-radius(3px);
@@ -207,7 +207,9 @@
     }
 }
 //detail
+//
 .topic-main{
+    width:100%;
     h1{
         font-size:18px;
         margin-bottom:10px;
@@ -329,8 +331,8 @@
 .reply-form{
     margin-top:20px;
     button[type=submit]{
-        width:100px;
-        height:40px;
+        padding:8px 20px;
+        height:24px;
         margin-top:20px;
         background-color:$action-blue;
         &:hover{
@@ -339,7 +341,7 @@
     }
 }
 .reply-list h2,.hot-reply-list h2{
-    border-bottom:2px solid #eee;
+    border-bottom:1px solid #ddd;
     padding-bottom:10px;
     .fa{
         font-size:18px;
@@ -360,33 +362,20 @@
         margin:20px 0;
         position:relative;
     }
-    .vote{
-        float:left;
-        font-size:16px;
-        i{
-            cursor:pointer;
-            display:block;
-        }
-        i.disable{
-            color:#ccc;
-        }
-        b{
-            width:16px;
-            text-align:center;
-            display:block;
-        }
-    }
-    .user-avatar-wrapper img{
+    .user-avatar-wrapper{
         position:absolute;
-        left:30px;
+        left:0;
         top:0;
         width:48px;
+        margin-right:10px;
+    }
+    .user-avatar-wrapper img{
+        width:48px;
         height:48px;
-        margin-right:1%;
         @include border-radius(5px);
     }
     .reply-main{
-        padding:0 0 0 90px;
+        padding:0 0 0 70px;
         @include clearfix();
         .uname,.usignature{
             font-size:16px;
@@ -417,9 +406,11 @@
         }
     }
     .reply-meta{
+        margin-top:5px;
         @include clearfix();
         li{
             float:left;
+            margin-right:12px;
         }
         .fa{
             margin-right:2px;
@@ -431,7 +422,6 @@
                 color:$link-color;
             }
         }
-        margin-left:90px;
     }
 }
 .topic-collect{
@@ -443,7 +433,6 @@
         border:1px solid #a9d8b2;
         padding:10px 20px;
         color:#57ad68;
-        outline:0;
         &:hover{
             border:1px solid #57ad68;
         }
@@ -549,26 +538,26 @@
             float:left;
             a{
                 font-weight:bold;
-                font-size:16px;
+                font-size:14px;
                 border:none;
                 padding:0 10px;
-                color:#a1a1a1;
+                color:#ccc;
                 display:block;
                 height:38px;
                 line-height:30px;
                 border-bottom:none;
                 &:hover{
-                    color:#111;
+                    color:$font-color;
                     height:34px;
-                    border-bottom:4px solid #111;
+                    border-bottom:4px solid $font-color;
                     @include transition(all .15s ease-in-out);
                 }
             }
             &.cur{
                 a{
                     height:34px;
-                    color:#111;
-                    border-bottom:4px solid #111;
+                    color:$font-color;
+                    border-bottom:4px solid $font-color;
                 }
             }
         }
@@ -634,9 +623,9 @@
         color:#06c;
     }
     #new-topic-title{
-        width:95%;
+        width:1098px;
         height:40px;
-        padding:0 2%;
+        padding:0 15px;
         font-weight:bold;
         font-size:16px;
     }
@@ -644,25 +633,27 @@
         margin:10px 0;
         border:1px solid #ddd;
         @include border-radius(3px);
-        width:99%;
+        width:1128px;
         height:450px;
         resize:vertical;
         background:#fff;
     }
     button[type=submit]{
         width:100px;
-        height:40px;
-        line-height:40px;
+        height:24px;
+        line-height:24px;
         background:$action-blue;
         color:#fff;
         border:none;
-        padding:0;
         @include border-radius(3px);
         &:hover{
             background:$action-blue-hover;
         }
     }
-    #auto-save-trigger,#clear-save{
+    #clear-save{
+        float:right;
+    }
+    #auto-save-trigger{
         margin-left:20px;
     }
     #auto-save{
@@ -909,7 +900,6 @@
                 margin: 0 12px;
                 dt,dd{
                     margin:0;
-                    color:#333;
                     font-size:16px;
                     font-weight:bold;
                     text-align:center;
@@ -929,7 +919,17 @@
             float:right;
             color:#999;
             .btn{
-                height:40px;
+                height:24px;
+                line-height:24px;
+            }
+            .message-btn{
+                background-color:$action-gray;
+                &:hover{
+                    background-color:$action-gray-hover;
+                }
+                .fa{
+                    margin-right:3px;
+                }
             }
             a{
                 margin-left:10px;
@@ -939,7 +939,16 @@
                 }
             }
             #add-relation{
-
+                .fa{
+                    width:12px;
+                }
+                width:60px;
+            }
+            #del-relation,.godel{
+                .fa{
+                    width:15px;
+                }
+                width:80px;
             }
             #del-relation{
                 background-color:$action-blue;
@@ -1041,7 +1050,12 @@
     h2{
         border-bottom:1px solid $border-color;
         padding-bottom:6px;
-        margin:18px 0;
+        margin:28px 0 18px 0;
+    }
+    #otherbrand{
+        display:none;
+        width:100px;
+        margin-left:10px;
     }
     input[type=text],textarea{
         width:600px;
@@ -1053,6 +1067,7 @@
         width:80px;
     }
     select{
+        height:36px;
         width:100px;
     }
     .wycarurl{
@@ -1070,13 +1085,14 @@
         }
     }
     .carimgs-list{
-        width:1200px;
+        width:1120px;
         @include clearfix();
     }
     .carimg{
+        width:202px;
         position:relative;
         float:left;
-        margin-right:30px;
+        margin-right:15px;
         .remove-img{
             position:absolute;
             display:none;
@@ -1093,7 +1109,7 @@
             }
         }
         img{
-            width:200px;
+            width:202px;
             height:150px;
         }
         input[type=text]{
@@ -1124,8 +1140,11 @@
     }
 }
 .about{
-    h1,h3{
-        margin:20px 0;
+    h1{
+        margin-bottom:12px;
+    }
+    h3{
+        margin:22px 0 5px 0;
     }
 }
 .user-list{
